--- a/client/src/assets/scss/app.scss
+++ b/client/src/assets/scss/app.scss
@@ -15,6 +15,8 @@ Global Styles
 
 * {
     outline: none;
+    font-family: "Merriweather", serif !important;
+    font-optical-sizing: auto !important;
 }
 
 body {
